add all changes

--- a/app/CSS/index.css
+++ b/app/CSS/index.css
@@ -1,9 +1,9 @@
 body {
-    background-color: burlywood;
+    background-color: greenyellow;
     font-size: 1.5rem
 }
 .head{
-    background-color: olive;
+    background-color: gold;
     width: 100%;
 
 }
